<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>race_decision_engine</name>
  <version>1.0.0</version>
  <description>Race Decision Engine that makes use of behavior trees to output a target speed limit, line and behavior mode</description>
  <maintainer email="sisahawork@gmail.com">Siddharth Saha</maintainer>
  <license>LGPLv3</license>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>race_msgs</depend>
  <depend>base_common</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>target_trajectory_line</depend>
  <depend>transform_helper</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>generate_parameter_library</depend>
  <depend>backward_ros</depend>
  <depend>lifecycle_msgs</depend>

  <exec_depend>autoware_auto_perception_rviz_plugin</exec_depend>
  <exec_depend>groot</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
