<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>race_path_planner</name>
  <version>0.0.0</version>
  <description>Race Path Planner that generates local trajectories for avoidance</description>
  <maintainer email="sisahawork@gmail.com">Siddharth Saha</maintainer>
  <license>LGPLv3</license>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>race_msgs</depend>
  <depend>base_common</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>target_trajectory_line</depend>
  <depend>transform_helper</depend>
  <depend>eigen</depend>
  <depend>tf2_eigen</depend>
  <depend>backward_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
