<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lgsvl_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>
  <maintainer email="sisahawork@gmail.com">Siddharth Saha</maintainer>
  <license>LGPLv3</license>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>
  <author email="haorux@andrew.cmu.edu">Haoru Xue</author>
  <author email="dvd@gaiaplatform.io">David Von Derau</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gps_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>race_msgs</depend>
  <depend>target_trajectory_line</depend>
  <depend>nav_msgs</depend>
  <depend>lgsvl_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>

  <depend>base_common</depend>
  <depend>autonomy_bringup</depend>
  <depend>lgsvl_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
